Modified configs ambiguity

--- a/chat_templates/default.jinja
+++ b/chat_templates/default.jinja
@@ -1,9 +1,7 @@
-{% if system %}<|system|>
-{{ system }}
-</|system|>{% endif %}
-
-<|user|>
-{{ user }}
-</|user|>
-
-<|assistant|>
+{%- if system -%}
+<|im_start|>system
+{{ system }}<|im_end|>
+{%- endif %}
+<|im_start|>user
+{{ user }}<|im_end|>
+<|im_start|>assistant
